--- a/Back/package.json
+++ b/Back/package.json
@@ -1,47 +1,64 @@
 {
-  "name": "Back",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest --watch",
-    "coverage": "jest --coverage",
-    "build": "tsc",
-    "build:live": "nodemon src/index.ts",
-    "dev": "npm run build:live",
-    "start": "node dist/index.js",
-    "prod": "npm run build && npm start"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/body-parser": "^1.17.0",
-    "@types/express": "^4.17.0",
-    "@types/jest": "^24.0.15",
-    "@types/mongoose": "^5.5.8",
-    "@types/node": "^12.6.2",
-    "jest": "^24.8.0",
-    "nodemon": "^1.19.1",
-    "ts-jest": "^24.0.2",
-    "ts-node": "^8.3.0",
-    "typescript": "^3.5.3"
-  },
-  "dependencies": {
-    "@types/cors": "^2.8.5",
-    "@types/jsonwebtoken": "^8.3.2",
-    "@types/nodemailer": "^6.2.0",
-    "@types/passport": "^1.0.0",
-    "@types/passport-jwt": "^3.0.1",
-    "@types/passport-local": "^1.0.33",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.6.4",
-    "nodemailer": "^6.3.0",
-    "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
-  }
+    "name": "Back",
+    "version": "0.1.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "node -r dotenv/config dist/index.js",
+        "start:dev": "node -r dotenv/config dist/index.js dotenv_config_path=./.env.dev ",
+        "start:homolog": "node -r dotenv/config dist/index.js dotenv_config_path=./.env.dev",
+        "build": "tsc",
+        "build:live": "nodemon -r dotenv/config src/index.ts dotenv_config_path=./.env.dev",
+        "dev": "npm run build:live",
+        "homolog": "npm run build && npm run start:homolog",
+        "prod": "npm run build && npm start",
+        "test": "jest --watch .ts --setupFiles ./src/configTest.ts",
+        "coverage": "jest --coverage .ts --setupFiles ./src/configTest.ts"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://gitlab.dbserver.com.br/Incubadora/2019-ci/incubadora-2019-back.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/body-parser": "^1.17.0",
+        "@types/cors": "^2.8.5",
+        "@types/dotenv": "^6.1.1",
+        "@types/errorhandler": "0.0.32",
+        "@types/express": "^4.17.0",
+        "@types/express-validator": "^3.0.0",
+        "@types/helmet": "0.0.43",
+        "@types/jest": "^24.0.17",
+        "@types/mockingoose": "^2.11.0",
+        "@types/mongoose": "^5.5.12",
+        "@types/node": "^12.7.1",
+        "@types/supertest": "^2.0.8",
+        "jest": "^24.8.0",
+        "mockingoose": "^2.13.2",
+        "nodemon": "^1.19.1",
+        "supertest": "^4.0.2",
+        "ts-jest": "^24.0.2",
+        "ts-node": "^8.3.0",
+        "typescript": "^3.5.3"
+    },
+    "dependencies": {
+        "@types/bcrypt": "^3.0.0",
+        "@types/passport": "^1.0.1",
+        "@types/passport-jwt": "^3.0.1",
+        "@types/passport-local": "^1.0.33",
+        "bcrypt": "^3.0.6",
+        "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
+        "dotenv": "^8.0.0",
+        "errorhandler": "^1.5.1",
+        "express": "^4.17.1",
+        "express-validator": "^6.1.1",
+        "helmet": "^3.21.1",
+        "mongoose": "^5.6.9",
+        "passport": "^0.4.0",
+        "passport-jwt": "^4.0.0",
+        "passport-local": "^1.0.0"
+    }
 }
