Não está passando nos testes

--- a/Back/package.json
+++ b/Back/package.json
@@ -1,64 +1,54 @@
 {
-    "name": "Back",
-    "version": "0.1.0",
+    "name": "back",
+    "version": "1.0.0",
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "node -r dotenv/config dist/index.js",
-        "start:dev": "node -r dotenv/config dist/index.js dotenv_config_path=./.env.dev ",
-        "start:homolog": "node -r dotenv/config dist/index.js dotenv_config_path=./.env.dev",
+        "test": "jest --watch",
+        "coverage": "jest --coverage",
         "build": "tsc",
-        "build:live": "nodemon -r dotenv/config src/index.ts dotenv_config_path=./.env.dev",
+        "build:live": "nodemon src/index.ts",
         "dev": "npm run build:live",
-        "homolog": "npm run build && npm run start:homolog",
-        "prod": "npm run build && npm start",
-        "test": "jest --watch .ts --setupFiles ./src/configTest.ts",
-        "coverage": "jest --coverage .ts --setupFiles ./src/configTest.ts"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://gitlab.dbserver.com.br/Incubadora/2019-ci/incubadora-2019-back.git"
+        "start": "node dist/index.js",
+        "prod": "npm run build && npm start"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "@types/body-parser": "^1.17.0",
-        "@types/cors": "^2.8.5",
         "@types/dotenv": "^6.1.1",
-        "@types/errorhandler": "0.0.32",
-        "@types/express": "^4.17.0",
-        "@types/express-validator": "^3.0.0",
-        "@types/helmet": "0.0.43",
-        "@types/jest": "^24.0.17",
-        "@types/mockingoose": "^2.11.0",
-        "@types/mongoose": "^5.5.12",
-        "@types/node": "^12.7.1",
-        "@types/supertest": "^2.0.8",
-        "jest": "^24.8.0",
-        "mockingoose": "^2.13.2",
-        "nodemon": "^1.19.1",
-        "supertest": "^4.0.2",
-        "ts-jest": "^24.0.2",
-        "ts-node": "^8.3.0",
-        "typescript": "^3.5.3"
+        "@types/express": "^4.17.1",
+        "@types/jest": "^24.0.19",
+        "@types/mongoose": "^5.5.22",
+        "@types/node": "^12.11.2",
+        "@types/passport": "^1.0.1",
+        "@types/passport-jwt": "^3.0.2",
+        "@types/passport-local": "^1.0.33",
+        "jest": "^24.9.0",
+        "nodemon": "^1.19.4",
+        "ts-jest": "^24.1.0",
+        "ts-node": "^8.4.1",
+        "typescript": "^3.6.4"
     },
     "dependencies": {
         "@types/bcrypt": "^3.0.0",
-        "@types/passport": "^1.0.1",
-        "@types/passport-jwt": "^3.0.1",
-        "@types/passport-local": "^1.0.33",
+        "@types/body-parser": "^1.17.1",
+        "@types/cors": "^2.8.6",
+        "@types/errorhandler": "0.0.32",
+        "@types/helmet": "0.0.44",
+        "@types/supertest": "^2.0.8",
         "bcrypt": "^3.0.6",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
-        "dotenv": "^8.0.0",
+        "dotenv": "^8.2.0",
         "errorhandler": "^1.5.1",
         "express": "^4.17.1",
-        "express-validator": "^6.1.1",
-        "helmet": "^3.21.1",
-        "mongoose": "^5.6.9",
+        "helmet": "^3.21.2",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.7.5",
         "passport": "^0.4.0",
         "passport-jwt": "^4.0.0",
-        "passport-local": "^1.0.0"
+        "passport-local": "^1.0.0",
+        "supertest": "^4.0.2"
     }
 }
